<resources>
    <string name="app_name">AppDesign</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="action_settings">Settings</string>
    <string name="email" translatable="false">Email</string>
    <string name="passowrd" translatable="false">Password</string>
    <string name="login">LOGIN</string>
    <string name="Create_Acc">Create Account</string>
    <string name="no_acc_yet">No account yet? Create one</string>
    <string name="another_sign_up">- or Sign up Via -</string>
    <string name="arm">Arm</string>
    <string name="shoulder">Shoulder</string>
    <string name="newUser" translatable="false">Not a Member yet? Sign Up here.</string>
    <string name="fullName" translatable="false">Full Name</string>
    <string name="req_not_complete" translatable="true">Requirements not complete</string>
    <string name="chest">Chest</string>
    <string name="core">Core</string>
    <string name="Note_Added_Successfull">Note Added Successfully</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already a member? Login.</string>
    <string name="sign_out">Sign Out</string>
    <string name="submit" translatable="false">SUBMIT</string>
    <string name="back">BACK</string>
</resources>
